--- a/css/css-only-for-test2.css
+++ b/css/css-only-for-test2.css
@@ -113,3 +113,40 @@ border-bottom: 1px dotted #e5e5e5;
     font-size:1.5em;
 
 }
+.modal{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(111, 189, 213, 0.5);
+
+}
+.modal .container2333{
+    width: 404px;
+    height: 512px;
+    background:#fff;
+    position: absolute;
+    left:0;
+    right:0;
+    top:0;
+    bottom: 0;
+    margin: auto;
+    box-sizing: border-box;
+    padding: 1em;
+    border-radius: 6px;
+}
+.modal .container2333 .close{
+    width:30px;
+    height: 30px;
+    background-color: #ef4238;
+    border-radius: 50%;
+    color:white;
+    text-align: center;
+    line-height: 30px;
+    position:absolute;
+    right:-15px;
+    top:-15px;
+    border: 2px solid #fff;
+    cursor: pointer;
+}
