--- a/css/css-only-for-test2.css
+++ b/css/css-only-for-test2.css
@@ -13,8 +13,9 @@
 body {
     color: #47464a;
     font-family: 'Dokdo', "sans-serif"; 
-    --headingFont: 'Dokdo', "sans-serif";/* 使用更现代的字体 */
-    font-size:x-large;
+    --headingFont: 'Dokdo', "sans-serif";
+    font-size:xx-large;
+
 }
 
 .pagerr {
@@ -32,12 +33,12 @@ body {
 }
 
 .pagerr a:hover {
-    border-color: aqua; /* 悬停时的边框颜色 */
+    border-color: #B0E0E6; /* 悬停时的边框颜色 */
     background-color: #e0f7fa; /* 悬停时的背景颜色 */
 }
 
 .pagerr a.select {
-    background-color: aquamarine; /* 选中状态背景 */
+    background-color: #B0E0E6; /* 选中状态背景 */
     color: #47464a; /* 选中状态文字颜色 */
     border: none; /* 移除边框 */
 }
@@ -53,11 +54,21 @@ body {
 }
 
 .mainTuT .nav {
-    height: 60px;
-    background: #47464a;
-    color: #999;
-    text-align: center;
-    line-height: 60px;
+    height: 80px; /* 高度 */
+    background: #47464a; /* 背景颜色 */
+    color: #f1f1f1; /* 更亮的字体颜色 */
+    text-align: center; /* 文本居中 */
+    line-height: 80px; /* 行高与高度一致，使文本垂直居中 */
+    font-size: 32px; /* 字体大小 */
+    border-bottom: 3px solid #B0E0E6; /* 底部边框 */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* 阴影效果 */
+    border-radius: 10px; /* 圆角边框 */
+    transition: background-color 0.3s; /* 背景颜色过渡效果 */
+}
+
+.mainTuT .nav:hover {
+    background: #B0E0E6; /* 悬停时的背景颜色 */
+    color: #fff; /* 悬停时字体颜色 */
 }
 
 .mainTuT .nav a {
@@ -82,17 +93,15 @@ body {
 
 .mainTuT .containerOmO .choose-area {
     margin: 40px 0;
-    font-size: 14px;
+    font-size: 24px;
     line-height: 30px;
     padding: 30px;
-    background-color: #f9f9f9; /* 增加背景颜色 */
     border-radius: 10px; /* 圆角 */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* 添加阴影 */
 }
 
 .mainTuT .containerOmO .choose-area .choose-item {
     margin: 1em 0;
-    border-bottom: 1px dotted #e5e5e5;
 }
 
 .mainTuT .containerOmO .choose-area .choose-item.no-line {
@@ -106,7 +115,6 @@ body {
 
 .mainTuT .containerOmO .choose-area .choose-item .right {
     float: left;  
-    border: 2px solid #e5e5e5;
     border-radius: 8px; /* 圆角 */
     width: calc(100% - 20px); /* 适应宽度 */
 }
@@ -239,7 +247,30 @@ body {
 .show {
     display: inline-block; /* Show the text when the class is added */
 }
+  .choose-area {
+    background-image: url('../images/oc/abababa.png'); /* 替换为你的背景图片路径 */
+    background-size:auto; /* 使背景图覆盖整个容器 */
+    background-position: center; /* 背景图居中 */
+    border-radius: 10px; /* 圆角边框 */
+    padding: 20px; /* 内边距 */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* 阴影效果 */
+  }
 
+
+.scrolling-text {
+    display: inline-block; /* 行内块级元素 */
+    white-space: nowrap; /* 不换行 */
+    animation: scroll 15s linear infinite; /* 动画效果，持续时间可调 */
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(100%); /* 从右侧开始 */
+    }
+    100% {
+        transform: translateX(-100%); /* 向左移动至完全隐藏 */
+    }
+}
 
 
 
