--- a/css/#kiara.css
+++ b/css/#kiara.css
@@ -25,17 +25,23 @@
     --accent-2: hsl(37, 90%, 51%);
     --textColorlight: #EDE5CC;
 
-    /* Typography */
-    --headingFont: 'Dokdo', serif;
-    --bodyFont: 'East Sea Dokdo', sans-serif; /* Body font */
 }
 
-/* Placeholder for Google Fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Dokdo&family=East+Sea+Dokdo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&family=East+Sea+Dokdo&display=swap');
+:root {
 
+    /* VARIABLES */
+
+    /* Typography */
+  --headingFont: 'Dokdo', "sans-serif";
+  --bodyFont: 'East Sea Dokdo', "sans-serif";
+}
 body {
     background: var(--tertiary);
     font-family: var(--bodyFont); 
+    font-size:xx-large;
     color: var(--textColorlight);
 }
 
