--- a/css/oyster.css
+++ b/css/oyster.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 20px; /* 页面边距 */
     line-height: 1.6; /* 增加文本行间距 */
-    background-color: #f7f7f7; /* 柔和背景色 */
+    background-color: #CCCCFF; /* 柔和背景色 */
 }
 
 /* 文本框样式 */
