--- a/css/About.css
+++ b/css/About.css
@@ -98,8 +98,8 @@ body{
     justify-content:center;
     padding:0 40px;
     background: linear-gradient(to right bottom,
-    rgba(25, 255, 255, .6),
-    rgba(255,255,255,.3),
+    rgb(100, 149, 237),
+    rgb(240, 255, 255,.3),
     rgba(355,355,355,.2));
     backdrop-filter:blur(11px);
 }
@@ -140,21 +140,21 @@ body{
     font-weight:600;
     font-size:2em;
     padding-bottom:min(5%,10px);
-    color:rgb(70,100,180);
+    color:#FEBE10;
 }
 .card-title{
     font-size:80px;
     font-weight:700;
     font-size:4em;
     padding-bottom: min(20%,40px);
-    color:rgb(70,100,180);
+    color:#0000FF;
 }
 
 .card-content{
     font-size:24px;
     font-weight:400;
     font-size: larger;
-    color:rgb(94,123,255);
+    color:white;
     margin-bottom:60px;
 }
 .card-img{
