--- a/css/hawk.css
+++ b/css/hawk.css
@@ -1,7 +1,7 @@
 /* 标题样式：保留重点 */
 body {
     display: flex;
-    background-color:  #0080FE;
+    background-color:  #CCCCFF;
     background-size: cover;
     font-family: 'Dokdo', "sans-serif"; 
     --headingFont: 'Dokdo', "sans-serif"; 
@@ -10,7 +10,7 @@ body {
 
 h1 {
     color: rgb(204, 184, 222);
-    background-color: #000080;
+    background-color: #0000FF;
     text-align: center;
     font-size: 5em;
     margin-bottom: 1em;
@@ -94,10 +94,10 @@ a:active {
 
 /* 小型文字样式，加入边距 */
 .hawkboxQwQ {
-    color: darkorange;
+    color: #0000FF;
     font-size: 0.875em;
     line-height: 1.6;
-    background: linear-gradient(to right, #fff3e0, #ffe0b2);
+    background: linear-gradient(to right, #fff3e0, #0000FF);
     padding: 1.5em; /* 增加内边距 */
     border-radius: 8px;
     margin: 1.5em 0;
