--- a/css/squirrel.css
+++ b/css/squirrel.css
@@ -3,7 +3,7 @@
     padding:0;
 }
 body{
-    background-color: rgb(235,151,151);
+    background-color: #0F52BA;
 }
 .shell{
     display:grid;
@@ -15,7 +15,7 @@ body{
     grid-auto-flow: dense;
 }
 .shell>div{
-    background-color:rgb(51,51,51);
+    background-color:#FFD700;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -23,12 +23,9 @@ body{
     position:relative;
 }
 .shell span{
-    color:#fff;
-    font:100 100px 'kristen ITC';
+    color:#3457D5;
+    font-size: 2em;
     position:absolute;
-    top:-10px;
-    left:20px;
-    text-shadow: -5px 0 rgb(0, 0, 0),0 -5px rgb(0, 0, 0), 0 5px 0 rgb(0, 0, 0),0 5px rgb(0, 0, 0);
 }
 .shell .wide{
     grid-column:span 2;
@@ -40,4 +37,33 @@ body{
     grid-column:span 2;
     grid-row: span 2;
 }
-
+.button-32 {
+    background-color: #3457D5;
+    border-radius: 12px;
+    color: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 10px 15px;
+    text-align: center;
+    transition: 200ms;
+    width: 100%;
+    box-sizing: border-box;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-32:not(:disabled):hover,
+  .button-32:not(:disabled):focus {
+    outline: 0;
+    background: #0F52BA;
+    box-shadow: 0 0 0 2px rgba(0,0,0,.2), 0 3px 8px 0 rgba(0,0,0,.15);
+  }
+  
+  .button-32:disabled {
+    filter: saturate(0.2) opacity(0.5);
+    -webkit-filter: saturate(0.2) opacity(0.5);
+    cursor: not-allowed;
+  }
