--- a/css/css-only-for-test2.css
+++ b/css/css-only-for-test2.css
@@ -115,7 +115,7 @@ body {
 
 .mainTuT .containerOmO .choose-area .choose-item .left {
     float: left;
-    color: #999;
+    color: white;
 }
 
 .mainTuT .containerOmO .choose-area .choose-item .right {
