--- a/css/test6.0.css
+++ b/css/test6.0.css
@@ -8,7 +8,7 @@ body{
     display:grid;
     place-content:center;
     padding-block:30dvh;
-    background:#f7d6ff;
+    background:#0093AF;
 }
 @keyframes slide-fade-in {
     from{
@@ -28,10 +28,8 @@ body{
     animation-timeline: view();
     animation-range: contain 0% contain 50%;
     border-radius:10px;
-    line-height: 6;
     box-shadow: 0 px 8px 20px #00000002;
-    font-size:32px;
-    letter-spacing:5px;
+    font-size:2em;
     color:#fff;
     width:100%;
     height:100%;
@@ -40,8 +38,8 @@ body{
         #91defe,
         #99c0f9,
         #bdb6ec,
-        #d7b3e3,
-        #f9bccc);
+        #88e1f1,
+        #85cde9);
      display: flex;   
      justify-content: center;
      align-items:center;
@@ -59,3 +57,33 @@ body{
 .card:nth-of-type(7n){
     grid-row:span 2;
 }
+.button-32 {
+    background-color: #7f34d5;
+    border-radius: 12px;
+    color: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    padding: 10px 15px;
+    text-align: center;
+    transition: 200ms;
+    width: 100%;
+    box-sizing: border-box;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-32:not(:disabled):hover,
+  .button-32:not(:disabled):focus {
+    outline: 0;
+    background: #9660d0;
+    box-shadow: 0 0 0 2px rgba(0,0,0,.2), 0 3px 8px 0 rgba(0,0,0,.15);
+  }
+  
+  .button-32:disabled {
+    filter: saturate(0.2) opacity(0.5);
+    -webkit-filter: saturate(0.2) opacity(0.5);
+    cursor: not-allowed;
+  }
